<resources>
    <string name="random_dog_generator">Random Dog Generator!</string>
    <string name="clear_dogs">Clear Dogs!</string>
    <string name="generate">Generate!</string>
    <string name="menu">Menu</string>
    <string name="checkout">Checkout</string>
    <string name="logout">Logout</string>
    <string name="recently_generated">My Recently Generated Dog!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verify_pin">Verify Pin</string>
    <string name="welcome_message">Welcome to Daily Khana</string>
    <string name="enter_pin">Enter 4 Digit Login Pin</string>
    <string name="wrong_pin">Enter Valid Pin</string>
    <string name="user_name_demo">John Doe</string>
    <string name="user_role_demo">Manager</string>
    <string name="transaction">Transaction</string>
    <string name="category_name">Burger</string>
    <string name="food_name">Cheese Grilled Sandwich</string>
    <string name="add_to_cart">Add Item</string>
    <string name="submit">Submit</string>
    <string name="food_quantity">1</string>
    <string name="food_price">$ 50.10</string>
    <string name="logout_message">Are you sure, you want to logout?</string>
    <string name="missing_cart_items">Missing Cart Items?</string>
    <string name="no_transaction">No Transaction Items?</string>
    <string name="start_your_journey">Start Your food Journey Today</string>
    <string name="start_shopping">Order Food</string>
    <string name="confirm_pay">Confirm &amp; Pay</string>
    <string name="togo">TO GO</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_email">Enter Email address</string>
    <string name="enter_phone">Enter Mobile Number</string>
    <string name="first_name_empty">First Name should not empty</string>
    <string name="mobile_number_empty">Mobile Number should not empty</string>
    <string name="email_empty">Email Address should not empty</string>


</resources>