<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.codengineassessment.ui.viewmodel.ToGoViewModel" />

        <import type="android.view.View" />

        <variable
            name="data"
            type="com.codengineassessment.data.model.Food" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_sheet_round_top">

        <View
            android:id="@+id/topView"
            android:layout_width="@dimen/margin_33dp"
            android:layout_height="5dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:background="@drawable/black_rectangle_with_4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/close"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="10dp"
            android:tint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.811"
            app:layout_constraintStart_toEndOf="@+id/topView"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_close_24" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/toGoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_20dp"
            android:text="@string/togo"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topView"
            app:layout_constraintVertical_bias="0.511"
            app:srcCompat="@drawable/baseline_add_circle_24" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:fitsSystemWindows="true"
            android:overScrollMode="never"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toGoText">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_10dp"
                    android:layout_marginVertical="@dimen/margin_10dp"
                    android:text="@string/enter_first_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_10dp"
                    android:inputType="textPersonName"
                    app:backgroundTint="@color/light_blue"
                    android:text="@={viewModel.firstName}"
                    android:textColor="@color/light_blue"
                    android:textSize="@dimen/text_size_14sp" />

                <TextView
                    android:id="@+id/firstnameError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_10dp"
                    android:text="@{viewModel.firstNameErrorMessage}"
                    android:textColor="@color/tomato_55"
                    android:textSize="@dimen/text_size_12sp"
                    tools:text="@string/first_name_empty" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_10dp"
                    android:layout_marginVertical="@dimen/margin_10dp"
                    android:text="@string/enter_last_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_10dp"
                    android:inputType="textPersonName"
                    app:backgroundTint="@color/light_blue"
                    android:text="@={viewModel.lastName}"
                    android:textColor="@color/light_blue"
                    android:textSize="@dimen/text_size_14sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_10dp"
                    android:layout_marginVertical="@dimen/margin_10dp"
                    android:text="@string/enter_phone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/mobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_10dp"
                    android:inputType="phone"
                    android:digits="0123456789"
                    android:maxLength="10"
                    app:backgroundTint="@color/light_blue"
                    android:text="@={viewModel.mobile}"
                    android:textColor="@color/light_blue"
                    android:textSize="@dimen/text_size_14sp" />

                <TextView
                    android:id="@+id/mobileNumberError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_10dp"
                    android:text="@{viewModel.mobileNumberErrorMessage}"
                    android:textColor="@color/tomato_55"
                    android:textSize="@dimen/text_size_12sp"
                    tools:text="@string/mobile_number_empty" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_10dp"
                    android:layout_marginVertical="@dimen/margin_10dp"
                    android:text="@string/enter_email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_10dp"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.email}"
                    app:backgroundTint="@color/light_blue"
                    android:textColor="@color/light_blue"
                    android:textSize="@dimen/text_size_14sp" />

                <TextView
                    android:id="@+id/emailError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_10dp"
                    android:text="@{viewModel.emailErrorMessage}"
                    android:textColor="@color/tomato_55"
                    android:textSize="@dimen/text_size_12sp"
                    tools:text="@string/mobile_number_empty" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_style"
            android:backgroundTint="@color/address_submit_disable_bg"
            android:lineSpacingExtra="2.4sp"
            android:minHeight="@dimen/margin_33dp"
            android:paddingHorizontal="@dimen/margin_33dp"
            android:paddingVertical="@dimen/margin_15dp"
            android:stateListAnimator="@null"
            android:text="@string/submit"
            android:onClick="@{()->viewModel.submit()}"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_margin="@dimen/margin_33dp"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nestedScrollView"
            app:layout_constraintVertical_bias="0.40"
            app:lineHeight="@dimen/text_size_24sp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>