<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.codengineassessment.ui.viewmodel.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.activity.LoginActivity">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageView2"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_marginTop="50dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/splash" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:text="@string/welcome_message"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="31dp"
                    android:text="@string/enter_pin"
                    android:textColor="@color/brownish_grey"
                    android:textSize="@dimen/text_size_20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />


                <com.chaos.view.PinView
                    android:id="@+id/pinview"
                    style="@style/PinWidget.PinView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:cursorVisible="true"
                    android:gravity="center"
                    android:inputType="number"
                    android:itemBackground="@color/white"
                    android:textColor="@color/black"
                    app:cursorColor="@color/black"
                    app:hideLineWhenFilled="false"
                    app:itemCount="4"
                    android:text="@={viewModel.otp}"
                    app:itemHeight="50dp"
                    app:itemRadius="10dp"
                    app:itemWidth="50dp"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    app:lineColor="@color/light_grey" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.errorMessage}"
                    tools:text="@string/wrong_pin"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:textColor="@color/tomato_55"
                    android:textSize="@dimen/text_size_12sp"
                    android:visibility="@{viewModel.isValidPin ? View.INVISIBLE : View.VISIBLE}"
                    app:layout_constraintStart_toStartOf="@+id/pinview"
                    app:layout_constraintTop_toBottomOf="@+id/pinview" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/verifyNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_10dp"
            android:layout_marginVertical="@dimen/margin_20dp"
            android:background="@drawable/new_button_style_rounded"
            android:lineSpacingExtra="8sp"
            android:layout_gravity="center"
            android:paddingVertical="@dimen/margin_15dp"
            android:paddingHorizontal="30dp"
            android:onClick="@{()->viewModel.onVerifyClick()}"
            android:text="@string/verify_pin"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16sp"
            app:lineHeight="@dimen/text_size_16sp" />

    </LinearLayout>

</layout>