<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.codengineassessment.ui.viewmodel.CartViewModel" />

        <variable
            name="data"
            type="com.codengineassessment.data.model.CartItemProduct" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:layout_marginBottom="@dimen/margin_15dp">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:elevation="@dimen/margin_3dp"
            android:minWidth="200dp"
            android:orientation="vertical"
            android:translationZ="@dimen/margin_3dp"
            app:cardBackgroundColor="@color/bg_style_solid_color"
            app:cardCornerRadius="@dimen/margin_12dp"
            app:cardElevation="@dimen/margin_0dp"
            app:cardUseCompatPadding="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/foodImage"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="@dimen/margin_10dp"
                    app:errorDrawable="@{@drawable/ic_image_placeholder_wrapper}"
                    app:imageUrl="@{data.foodImage}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@drawable/big_mac" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/foodName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:gravity="start"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@{data.foodName}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.38"
                    app:layout_constraintStart_toEndOf="@+id/foodImage"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/food_name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:text="@{`$`+data.foodPrice}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.202"
                    app:layout_constraintStart_toEndOf="@+id/foodImage"
                    app:layout_constraintTop_toBottomOf="@+id/foodName"
                    tools:text="@string/food_price" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/increase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="@dimen/margin_10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.697"
                    app:srcCompat="@drawable/baseline_add_circle_24" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:text="@{``+data.quantity}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_14sp"
                    android:layout_marginHorizontal="@dimen/margin_15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/increase"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.697"
                    app:srcCompat="@drawable/baseline_add_circle_24"
                    tools:layout_editor_absoluteY="67dp"
                    tools:text="@string/food_quantity" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/decrease"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/quantity"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginHorizontal="@dimen/margin_15dp"
                    app:layout_constraintVertical_bias="0.697"
                    app:srcCompat="@drawable/baseline_do_disturb_on_24" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>